<resources>

    <string name="default_settings">1111111111</string>
    <string name="connection_error">Errore di connessione</string>
    <string name="permission_not_granted">Errore: impossibile ottenere permessi!</string>

    <string name="notification">Notifiche</string>
    <string name="like_notification">Notifiche Like</string>
    <string name="follower_notification">Notifiche Follower</string>
    <string name="new_photo_notification">Notifiche nuove foto caricate</string>
    <string name="facebook">Facebook</string>
    <string name="attention">Attenzione!</string>
    <string name="ask_disconnect_facebook">Se ti disconnetti da facebook non potrai più eseguire il Login con Facebook!</string>
    <string name="facebook_connected">Connesso con Facebook!</string>
    <string name="facebook_disconnected">Disconnesso da Facebook!</string>

    <string name="app_name">ClothApp</string>
    <string name="action_settings">Settings</string>

    <string name="form_intro">Esegui il Login o Registrati</string>

    <string name="form_register_username">Inserisci un Username:</string>
    <string name="form_register">Inserisci i tuoi dati:</string>
    <string name="form_register_password">Inserisci e conferma una password:</string>
    <string name="logo_description">Application logo</string>
    <string name="main_username">Username</string>
    <string name="main_password">Password</string>
    <string name="main_login">Login</string>
    <string name="signup">Registrati</string>
    <string name="main_login_facebook">Login with Facebook</string>
    <string name="main_login_twitter">Login with Twitter</string>
    <string name="main_forgot_password"><u>Password dimenticata?</u></string>
    <string name="main_signup"><u>Sei nuovo? Registrati!</u></string>
    <string name="email">Email</string>
    <string name="invalid_email">Email non valida</string>
    <string name="empty_field">I campi non possono essere vuoti</string>
    <string name="check_data">Controllo dati</string>
    <string name="data_edited">Dati modificati</string>
    <string name="name">Nome</string>
    <string name="username">Username</string>
    <string name="name_shop">Nome del Negozio</string>
    <string name="lastname">Cognome</string>
    <string name="sex">Sesso</string>
    <string name="man">Uomo</string>
    <string name="woman">Donna</string>
    <string name="birthday">Data di Nascita</string>
    <string name="password_confirm">Conferma Password</string>
    <string name="reset_password">Inserisci la email del tuo account per richiedere una nuova password</string>
    <string name="send">Invia</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="info_negozio">Inserisci informazioni sul negozio</string>
    <string name="info_webSite">Sito Web</string>


    <string name="homepage_button">HomePage</string>
    <string name="logout_button">Logout</string>
    <string name="profile_button">Profilo</string>
    <string name="barra_separatrice">____________________________________________</string>
    <string name="back_button_label">Indietro</string>
    <string name="label_form_name">Nome Inserito:</string>
    <string name="label_form_lastname">Cognome Inserito:</string>
    <string name="finale">You Won!</string>
    <string name="loading">Caricamento…</string>
    <string name="load">Loading</string>

    <string-array name="string_menu">
        <item>Profilo</item>
        <item>Home</item>
        <item>Logout</item>
    </string-array>

    <string name="he_likes">Piace a</string>
    <string name="and_others">e altri</string>
    <string name="likes">like</string>
    <string name="no_following">L\' utente non segue nessuno</string>
    <string name="no_followers">L\' utente non ha nessun followers</string>
    <string name="no_photos_uploaded">L\' utente non ha caricato nessuna foto</string>
    <string name="edit_profile">Modifica Profilo</string>
    <string name="save">Salva</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="ask_back_from_upload">Vuoi annullare la procedura di upload?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ask_photo_delete">Vuoi eliminare questa foto?</string>
    <string name="ask_back_from_edit">Vuoi tornare indietro?</string>
    <string name="ask_back_from_edit_text">Cosi\' facendo annullerai tutte le modifiche</string>
    <string name="report">Segnala</string>
    <string name="edit_photo">Modifica Foto</string>
    <string name="delete_photo">Elimina Foto</string>
    <string name="report_photo">Segnala Foto</string>
    <string name="set_as_profile_picture">Usa come Immagine del Profilo</string>
    <string name="report_sent">Segnalazione Inviata!</string>
    <string name="reason">Motivo:   </string>
    <string name="select">Seleziona</string>
    <string name="optional">(Opzionale)</string>
    <string-array name="select_reason">
        <item>Spam o truffa</item>
        <item>Contenuti Pornografici</item>
        <item>Incitamento alla violenza</item>
        <item>Altro</item>
    </string-array>
    <string-array name="select_suggestion">
        <item>Bug</item>
        <item>Suggerimento</item>
        <item>Problema</item>
        <item>Altro</item>
    </string-array>
    <string name="separator">-</string>
    <string name="info">Log-Info</string>
    <string name="open_navigation">Apri il menu</string>
    <string name="close_navigation">Chiudi il menu</string>


    <string-array name="nav_drawer_items">
        <item>HomePage</item>
        <item>Profilo</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@mipmap/home_icon</item>
        <item>@mipmap/user_icon</item>
        <item>@mipmap/settings_icon</item>
        <item>@mipmap/exit_icon</item>
    </array>

    <string name="setting_pp">Imposto Immagine del profilo&#8230;</string>
    <string name="choose_profile_picture">Cambia immagina del profilo:</string>
    <array name="profile_picture_options">
        <item>Scatta Foto</item>
        <item>Carica da Galleria</item>
        <item>Visualizza immagine</item>
        <item>Rimuovi immagine del profilo</item>
    </array>
    <array name="profile_picture_options_negative">
        <item>Scatta Foto</item>
        <item>Carica da Galleria</item>
    </array>

    <!-- SETTINGS STRING -->
    <string name="account_settings">Account</string>

    <string name="profile_settings">Profilo</string>
    <string name="profile_summary">Impostazioni e modifiche del profilo utente</string>
    <string name="password_summary">Modifica la tua password</string>
    <string name="linked_account">Collegati con tutti i social network</string>
    <string name="notification_pref">Scegli le notifiche che vuoi ricevere</string>
    <string name="report_settings">Riportaci quello che pensi</string>
    <string name="saving_photo">Scegli se salvare le foto che scatti sul telefono</string>


    <string name="password_settings">Password</string>

    <string name="app_settings">App</string>

    <string name="account_collegati">Account Collegati</string>
    <string name="salva_foto">Salva Foto Sul Telefono</string>

    <string name="assitance_settings">Assistenza</string>
    <string name="info_set">Credits</string>
    <string name="info_settings">Info su di noi</string>
    <string name="facebook_page">La nostra pagina Facebook</string>
    <string name="app_version">Versione</string>
    <!-- SETTINGS STRING -->

    <array name="home_titles">
        <item>Most Recent</item>
        <item>Top Rated</item>
        <item>Popular Shops</item>
    </array>
    <string name="choose_user">Che tipo di utente sei?</string>
    <array name="signup">
        <item>Persona</item>
        <item>Negozio</item>
    </array>

    <array name="search_titles">
        <item>Users</item>
        <item>Clothes</item>
        <item>HashTag</item>
        <item>Brand</item>
    </array>
    <string name="cloth">Vestito</string>
    <string name="title_template_step">ciao</string>
    <string name="title_activity_new_profile">NewProfileActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="clothes">Clothes</string>
    <string name="Users">Users</string>
    <string name="tag">Tag</string>
    <string name="action_search">Search</string>
    <string name="send_to">Send To&#8230;</string>
    <string name="price">Prezzo</string>
    <string name="a">A</string>
    <string name="da">Da</string>
    <string name="euro">€</string>
    <string name="Filter">Filter</string>
    <string name="order">Ordina per</string>>


    <string-array name="array_order">
        <item>Most Popolar</item>
        <item>Most Recent</item>
        <item>Old</item>
    </string-array>
    <string name="title_activity_upload_photo">UploadPhotoActivity</string>

    <string name="info_profilo">INFO</string>
    <string name="photo">MY OUTFITS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="following">FOLLOWING</string>
    <string name="map">MAPPA</string>

    <string name="passSignup">Password</string>

    <string name="pswdStruct">La password da inserire deve:
    -   Contenere almeno una lettera maiuscola \n-   Contenere almeno una lettera minuscola\n-   Contenere almeno un numero
        \n-   NON contenere spazi
        \n-   NON contenere caratteri speciali (i.e. new line o tab)</string>

    <string name="wrongDate">La data inserita non è valida</string>

</resources>
