<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/report_photo"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/report_photo"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:textSize="24sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:textColorHint="@color/primaryText"
            android:hint="@string/reason"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/select_reason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_marginLeft="16dp"
            android:prompt="@string/select"
            android:layout_gravity="center_vertical|right"
            android:spinnerMode="dropdown"
            android:clickable="false" />
    </LinearLayout>

    <EditText
        android:id="@+id/comment"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:hint="@string/optional"/>
</LinearLayout>