<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        app:titleTextColor="@color/white"
        app:subtitleTextColor="@color/white"
        app:layout_collapseMode="parallax"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <ImageView
            android:id="@+id/done"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_gravity="right"
            android:paddingRight="8dp"
            android:src="@mipmap/ic_done_white_48dp" />
    </android.support.v7.widget.Toolbar>


    <RadioGroup
        android:id="@+id/radios"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:padding="20dp"
        android:inputType="text"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/sex"
            android:id="@+id/textView"
            android:textSize="16sp"
            android:textColor="@color/accentred" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/man"
            android:id="@+id/man"
            android:textSize="14sp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/woman"
            android:id="@+id/woman"
            android:checked="false"
            android:textSize="14sp" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:id="@+id/textView2"
        android:textSize="16sp"
        android:paddingTop="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="8dp"
        android:textColor="@color/accentred" />






    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="28sp"
            android:layout_height="wrap_content"
            android:text="@string/da"
            android:gravity="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="14sp" />
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/da"
            android:hint="@string/euro"
            android:gravity="right"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="28sp"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:gravity="center"
            android:textColor="@android:color/primary_text_light"
            android:textSize="14sp" />

        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:id="@+id/a"
            android:hint="@string/euro"
            android:gravity="right"
            android:textSize="14sp" />


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:id="@+id/textView3"
            android:textSize="16sp"
            android:textColor="@color/accentred"
            android:layout_gravity="center" />

        <Spinner
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:id="@+id/spinner"
            android:layout_weight="0.30" />
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="reset"
        android:textColor="@color/accentred"
        android:id="@+id/reset"
        android:layout_gravity="center|bottom"
        android:background="@color/sfondo" />


</LinearLayout>