<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.giacomoceribelli.clothapp.MainActivity"
    android:orientation="horizontal"
    android:id="@+id/toolbar">

    <include layout="@layout/toolbar" />
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.giacomoceribelli.clothapp.Risultato"
    android:paddingTop="50dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_form_name"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="10dip"
        />
    <TextView
        android:id="@+id/view_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_form_lastname"
        android:layout_marginTop="15dip"
        android:layout_marginBottom="10dip"
        />
    <TextView
        android:id="@+id/view_lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/back_button"
        android:layout_height="wrap_content"
        android:text="@string/back_button_label"
        android:layout_width="fill_parent"
        android:layout_marginTop="30dp" />

</LinearLayout>

</android.support.design.widget.CoordinatorLayout>