<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".login_signup.SignupActivity"
    android:theme="@style/AppTheme">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/background"
            android:orientation="vertical"
            android:padding="10dp"
            tools:context=".MainActivity"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:text="@string/form_register"
                android:textColor="@color/white"
                android:fontFamily="sans-serif"
                android:textAlignment="center"
                android:layout_marginBottom="10dp"/>


            <EditText
                android:id="@+id/edit_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=""
                android:hint="@string/main_username"
                android:background="@color/white"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_text"
                android:textColorHint="@color/input_text_hint"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=""
                android:hint="@string/main_password"
                android:background="@color/white"
                android:fontFamily="sans-serif"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:textColor="@color/input_text"
                android:textColorHint="@color/input_text_hint"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/form_register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:theme="@android:style/Theme.Material.Light"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>

